[gd_scene load_steps=7 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://fonts/Boncegro FF 4F.otf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Golos-UI_VF.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 72
use_filter = true
font_data = ExtResource( 3 )

[node name="Control" type="Control" groups=["ui"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoCheck" type="CheckButton" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 104.0
margin_bottom = 40.0
text = "Go?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 80.0
margin_top = 300.0
margin_right = 20.0
margin_bottom = 36.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="GoCheck" to="." method="_on_GoCheck_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
